Fix: png too big

--- a/src/Components/Banner.css
+++ b/src/Components/Banner.css
@@ -14,7 +14,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: relative;
 }
 
 .banner.png img {
